# zeroenv

./: .gitignore  .secrets  README.md  pyproject.toml
.github/workflows/: tests.yml
src/zeroenv/: __init__.py  cli.py  crypto.py  storage.py  ui.py
tests/: __init__.py  test_cli.py  test_crypto.py  test_storage.py
