[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroenv"
version = "0.1.0"
authors = [
  { name="David", email="davechadwick@gmail.com" },
]
description = "Git-Safe Secrets for small teams and individuals."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "cryptography",
    "rich",
]

[project.scripts]
zeroenv = "zeroenv.cli:main"

[project.urls]
"Homepage" = "https://github.com/ropeadope62/zeroenv"
"Bug Tracker" = "https://github.com/ropeadope62/zeroenv/issues"
