[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroenv"
version = "0.1.0"
authors = [
  { name="ropeadope62 (Dave C.)", email="davechadwick@gmail.com" },
]
description = "Simple, secure, and git-safe secrets management.."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "cryptography",
    "rich",
]

[project.scripts]
zeroenv = "zeroenv.cli:main"



[project.urls]
"Homepage" = "https://github.com/ropeadope62/zeroenv"
"Bug Tracker" = "https://github.com/ropeadope62/zeroenv/issues"

